--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gsap": "3.13.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router": "^7.10.0"
+    "react-router": "^7.10.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
